<resources>
    <!-- App Name -->
    <string name="app_name">Happy Hearts Fund</string>

    <!-- MainActivity Tabs -->
    <string name="main_tab1_title">STORIES</string>
    <string name="main_tab2_title">PHOTOS</string>

    <!-- MainActivity Actions -->
    <string name="main_action_donate">Donate</string>
    <string name="main_action_partners">Partners</string>
    <string name="main_action_about">About</string>
    <string name="main_action_contact">Contact Us</string>
    <string name="main_action_login">Login</string>

    <!-- Share Menu -->
    <string name="action_share">Share</string>
    <string name="share_using">Share Using</string>

    <!-- About Activity -->
    <string name="about_title">About</string>
    <string name="about_text1">Happy Hearts Fund was created by Petra Němcová as a response to the devastating effects of the 2004 Indian Ocean Tsunami. Today, HHF serves 9 countries—Indonesia, Thailand, Mexico, Peru, Haiti, Chile, Philippines, Colombia and the USA—where it has built 116 schools that have served over 50,000 students. These 116 schools translate into almost $15,000,000.\n\nOUR FOUNDERS STORY\n\n\n"</string>
    <string name="about_text2">It was a beautiful sunny day in Thailand. My partner and I took a walk in the morning on the beach. We just finished breakfast and went back to the bungalow to begin packing because we were planning to leave in two hours. In a matter of seconds life changed for us and for millions of people. There was no warning. I looked up and heard people screaming. In seconds, the bungalow completely crashed. There was glass everywhere and we were trying to hold on for dear life. In that moment it didn’t matter how strong we were. It didn’t matter if I was a good swimmer. The power of nature was too strong for anyone.\n\nI must have had angels looking after me because there was really no chance that I could have survived. My pelvis was broken in four places and I almost drowned many many times so I thought for sure that I wouldn’t be saved. After holding onto a palm tree for eight hours I was found by a Thai man who risked his life to save the lives of strangers. Another wave could have come any minute yet he chose through his unconditional love to try to save others. From this experience the most painful part was not the physical pain. It was emotional pain from hearing children screaming for help when I was holding onto a palm tree. Because there was debris around me and I was trapped I couldn’t go and help them. After half an hour I couldn’t hear their voices anymore which meant that they couldn’t hold on any longer. In that moment I didn’t have a choice. I couldn’t help them. Now I that I have survived I have the choice to help children who survive natural disasters but are often forgotten. That experience is what keeps me and the Happy Hearts Fund team driven. It is what made me decide that I had to do something. When I could walk again I went back to Thailand to see what the biggest need in the country was and what could have the biggest impact. It was during that trip that &#8211; for the first time in my life &#8211; I could see what happens after first responders leave. I could see that when they leave &#8211; all support leaves, and communities remain devastated. I have seen this occur in all of the countries where Happy Hearts Fund now works. This lack of support after first response means that children are without safe schools for four, six, or even more years. Six years is an entire primary school education. The ripple effects on these children’s lives and the lives of their community and future generations is tremendous. To solve this problem I founded the non-profit Happy Hearts Fund. \n\nWe are dedicated to rebuilding safe, resilient schools and to restoring hope and opportunity in the lives of children after natural disasters. I’ve found that if instead of only supporting communities during first response we create a sustained response throughout their recovery by rebuilding schools the ripple effects on children’s emotional healing, their potential job opportunities, and the overall hopefulness of the community is incredible. These schools also revitalize the economy and help future generations in the community. On so many levels they gives the community a much needed energy boost and economic boost.</string>

    <!-- Donate Activity -->
    <string name="donate_5">Buy 5 Hearts ❤</string>
    <string name="donate_10">Buy 10 Hearts ❤</string>
    <string name="donate_20">Buy 20 Hearts ❤</string>
    <string name="donate_other">Buy More</string>

    <!-- Donate Activity -->
    <string name="donate_title">Donate</string>

    <!-- Partners Activity -->
    <string name="partners_title">Our Partners</string>

    <string name="splash_title">Splash Screen</string>
    <string name="splash_message">118 Schools Rebuilt in 10 countries and still counting...</string>

</resources>
