<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_donate"
        android:title="@string/main_action_donate"
        android:icon="@drawable/ic_action_heart"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_login"
        android:title="@string/main_action_login"
        app:showAsAction="never" />

    <item android:id="@+id/action_contact"
        android:title="@string/main_action_contact"
        app:showAsAction="never" />

    <item android:id="@+id/action_partners"
        android:title="@string/main_action_partners"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/main_action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
